# instaBoost

./: CMakeLists.txt  README.md
src/: affine_transform.cpp  affine_transform.h  coco_mask_extractor.cpp  coco_mask_extractor.h  guided_pos.cpp  guided_pos.h  heatmap.cpp  heatmap.h  single_img_process.cpp  single_img_process.h
